<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sommy.android.med_manager.ui.AddMedictionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/labelTopBottom_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:text="@string/medicationName_label" />

    <EditText

        android:id="@+id/name_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editText_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editLabelTop_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:text="@string/medicationDescription_label" />

    <EditText
        android:id="@+id/description_EditText"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/editText_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:maxLines="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editLabelTop_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:text="@string/interval_label" />

    <EditText
        android:id="@+id/interval_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editText_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editLabelTop_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:text="@string/startDate_label" />

    <EditText
        android:id="@+id/startDate_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editText_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:inputType="datetime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editLabelTop_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:text="@string/endDate_label" />

    <EditText
        android:id="@+id/endDate_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/labelTopBottom_margin"
        android:layout_marginTop="@dimen/editText_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:inputType="datetime"/>

    </LinearLayout>

</ScrollView>
